--- a/spring-boot/spring-boot-fundamentals/fundamentals/src/main/resources/application.properties
+++ b/spring-boot/spring-boot-fundamentals/fundamentals/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 
 logging.level.org.springframework: DEBUG
 # After this we will be able to see Evaluation report after running
+
+# Override H2 default props
+spring.datasource.url=jdbc:h2:mem:bugtracker
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
